// EasyReads Database Diagram
// Docs: https://dbml.dbdiagram.io/docs
// MongoDB Collections with Relationships

//----------------------------------------------//
// Core Book Collections
//----------------------------------------------//

Table books {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique, note: 'Unique identifier across all collections']
  author varchar [not null]
  image_link varchar [not null]
  amazon_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table ebooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique, note: 'Unique identifier, can reference books.ISBN']
  author varchar [not null]
  image_link varchar [not null]
  amazon_link varchar
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table audiobooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique, note: 'Unique identifier, can reference books.ISBN']
  author varchar [not null]
  narrator varchar [note: 'Audio book narrator name']
  image_link varchar [not null]
  amazon_link varchar
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

//----------------------------------------------//
// Category Book Collections
//----------------------------------------------//

Table fictionbooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique, note: 'Can reference books.ISBN if same book exists']
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table sciencebooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique]
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table biographybooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique]
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table fantasybooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique]
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table historybooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique]
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table technologybooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique]
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

Table romancebooks {
  _id ObjectId [pk]
  name varchar [not null]
  ISBN varchar [not null, unique]
  author varchar [not null]
  image_link varchar [not null]
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    ISBN [unique, name: 'idx_isbn']
    _id [pk]
  }
}

//----------------------------------------------//
// User Collection
//----------------------------------------------//

Table users {
  _id ObjectId [pk]
  username varchar [not null, unique, note: 'Unique username for MongoDB user storage']
  password varchar [not null, note: 'Bcrypt hashed password']
  createdAt datetime [default: `now()`]
  updatedAt datetime [default: `now()`]
  
  Indexes {
    username [unique, name: 'idx_username']
    _id [pk]
  }
}

//----------------------------------------------//
// Relationships (Logical connections via ISBN)
//----------------------------------------------//

// ISBN serves as a logical connection between collections
// A book can exist in multiple formats (physical, ebook, audiobook)
// and can belong to multiple categories

Ref: ebooks.ISBN - books.ISBN [note: 'E-book version of physical book']
Ref: audiobooks.ISBN - books.ISBN [note: 'Audiobook version of physical book']

// Category books can reference main books collection via ISBN
Ref: fictionbooks.ISBN - books.ISBN [note: 'Fiction category book']
Ref: sciencebooks.ISBN - books.ISBN [note: 'Science category book']
Ref: biographybooks.ISBN - books.ISBN [note: 'Biography category book']
Ref: fantasybooks.ISBN - books.ISBN [note: 'Fantasy category book']
Ref: historybooks.ISBN - books.ISBN [note: 'History category book']
Ref: technologybooks.ISBN - books.ISBN [note: 'Technology category book']
Ref: romancebooks.ISBN - books.ISBN [note: 'Romance category book']

//----------------------------------------------//
// Notes and Documentation
//----------------------------------------------//

Note books {
  '**Main Books Collection**
  
  Stores physical books with Amazon purchase links.
  This is the primary collection for general books.
  
  **Key Features:**
  - ISBN is unique and serves as identifier
  - All fields are required
  - Timestamps auto-managed by Mongoose'
}

Note ebooks {
  '**E-Books Collection**
  
  Digital book format collection.
  Can be linked to physical books via ISBN.
  
  **Key Features:**
  - amazon_link is optional (may use different platform)
  - Same ISBN can exist in books collection'
}

Note audiobooks {
  '**Audiobooks Collection**
  
  Audio format books with narrator information.
  
  **Key Features:**
  - Includes narrator field for audio books
  - Can reference same book via ISBN'
}

Note fictionbooks {
  '**Category Collections**
  
  Fiction, Science, Biography, Fantasy, History, Technology, Romance.
  
  **Structure:**
  - All category collections have identical schema
  - No amazon_link field (category-specific)
  - ISBN can reference main books collection
  
  **Usage:**
  - Books can belong to multiple categories
  - Same ISBN can exist in multiple category collections'
}

Note users {
  '**User Collection (Optional)**
  
  MongoDB user storage for additional user data.
  Primary authentication handled by Firebase Auth.
  
  **Note:** This collection is optional as Firebase
  handles authentication. Use for extended user profiles.'
}
